<resources>
    <string name="app_name">Invoker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="bully_body">
        "Bullying has become such a hot buzzword in our society these days that the mere mention of"
        " it can instantly trigger panic in the heart of the most experienced parent. So before "
        "you have a conversation with your child about bullying, know this: Not all hurtful "
        "behavior is bullying.\n\n"
        "Help Your Child Understand What Bullying Is . . . and Isn’t\n\n"
        "Bullying is comprised of three key elements: an intent to harm, a power imbalance, and "
        "repeated acts or threats of aggressive behavior. Kids who bully are consciously choosing "
        "to be cruel, with no sense of regret or remors, even when the targets of bullying show or "
        "express their hurt or tell the aggressors to stop. Sometimes they're hurting too, thinking"
        " that hurting someone else can stop their pain.\n\n"
        "I love how this one school I visited in Wisconsin helped their school community - "
        "students, teachers, and parents - understand the different tiers of hurtful behavior:\n\n"
        "When someone says or does something unintentionally hurtful and they do it once, that’s "
        "RUDE.\n\n"
        "When someone says or does something intentionally hurtful and they do it once, that’s "
        "MEAN.\n\n"
        "When someone says or does something intentionally hurtful and they keep doing it, even "
        "when you tell them to stop or show them that you’re upset, that’s BULLYING.\n\n"
        "When a child is mean to multiple people or publicly posts a hurtful comment online that "
        "can be viewed by many, they are creating a repeated pattern of meanness, which can cross "
        "the line into bullying. Those who bully often lack empathy, the ability to know what it "
        "feels like to be in someone else’s shoes and to have compassion for his/her pain and "
        "suffering. The more empathy and compassion we can instill in our children, the less room "
        "there will be in their hearts for contempt and disregard for others.\n\n"
        "Most Kids Aren’t Cruel—Offline or Online\n\n"
        "Numerous Internet safety advocates and experts report that most youth aren’t bullying "
        "their peers. That’s not to say that bullying isn’t a significant issue. The minority of "
        "kids who are bullying can cause real harm to both the targets of bullying AND the many "
        "bystanders who witness the bullying.\n\n"
        "Because kids tend to do what they believe the majority of their peers do, it’s important "
        "to share with your children this truth: Most youth are decent, caring, and responsible "
        "when it comes to how they treat others. Let your teens know that you expect no less from "
        "them. And if they do witness bullying, encourage them to report the abuse to an adult they"
        " trust or, if online, to the service provider or through the social network’s reporting "
        "system. Also encourage them to reach out and comfort the kid who is being bullied.\n\n"
        "Turning Kids’ Mistakes into Teachable Moments\n\n"
        "Let’s face it: our kids are going to make mistakes. Our job as caring parents is to make "
        "sure our kids don’t keep repeating those mistakes so they can move forward in positive, "
        "healthy ways. We do this by being good role models ourselves in how we treat those we "
        "encounter in life. We also need to hold our children accountable for their hurtful "
        "behaviors. You don’t want your kids to just say, Sorry. Have them SHOW they’re sorry by "
        "making up for the hurt they have caused others.\n\n"
        "Emphasize the Importance of Respecting Others’ Differences\n\n"
        "Remind your child that every person has value. While we all may not agree with others’ "
        "opinions, while we all may not end up being friends, we all deserve to have our presence "
        "acknowledged and to be treated in a civil and respectful manner.\n\n"
        "The reality is that we aren’t going to get rid of all the hurt in our kids’ world. What "
        "we can do is raise more emotionally resilient kids who have the tools and strength to get "
        "through the hurt, while the caring adults (teachers, school administrators, parents, and "
        "care givers) and kids in their lives work together to effectively address and prevent peer"
        " cruelty."
    </string>
    <string name="drug_body">
        "Parents matter. You are your child's most important role model and their best defence "
        "against drug use.\n\n"
        "By talking openly with your teen about drugs, you can strengthen your relationship with "
        "them. Once you have built a strong relationship, communication will be easier.\n\n"
        "When parents and teens disagree they sometimes drift away from each other. As hard as it "
        "may be, it is very important that you keep the lines of communication open.\n\n"
        "Your teen's point of view is very important.\n\n"
        "Most teens are happy with their relationship with their parents. However, many teens "
        "think their parents are not always there when they need them.\n\n"
        "As teens grow they need to be able to speak their mind. This may create conflict and "
        "during this time, you may think that your teen is not listening to you even though they "
        "really are.\n\n"
        "Remember that when your teen talks back and argues with you, it does not mean they are "
        "rejecting you. In fact, the opposite may actually be true. By asserting their "
        "independence, your teen is building a stronger and more positive relationship with you.\n\n"
        "Many teens don't want to talk just about drugs; they would also like to talk about other "
        "things such as adulthood and puberty, school issues and friendships.\n\n"
        "Beyond a strong relationship and open communication with parents, there are other "
        "important factors that can decrease or increase the chances that teens may experiment "
        "with drugs.\n\n"
        "Some of the key factors that can help your teen make the right choices include:\n\n"
        "- a strong family attachment\n"
        "- positive involvement in the community\n"
        "- connection at school\n"
        "- religious and spiritual beliefs\n"
        "- social skills\n"
        "- positive friendships\n\n"
        "Some of the key factors that can increase the chances that your child may experiment with "
        "drugs are:\n\n"
        "- low self-esteem\n"
        "- drug use by friends\n"
        "- peer pressure\n"
        "- conflict in families\n"
        "- poor grades\n"
        "- lack of connection at school\n\n"
        "Empower your teen. Help them resist drug use by:\n\n"
        "- nurturing their self-confidence and intelligence;\n"
        "- creating a sense of hope and optimism;\n"
        "- ensuring they grow up in a safe environment and are involved in extracurricular "
        "activities; and,\n"
        "- making sure they have the community support that they need.\n\n"
        "When talking with your teenager about drugs, here are a few tips to keep in mind.\n\n"
        "Think first. Act second. Try to stay clear and focused and don't get too emotional. Keep "
        "an open mind.\n\n"
        "Keep an eye on your teen's behaviour. Ask them everyday what they are doing and don't be "
        "afraid to set limits such as curfews.\n\n"
        "Encourage your teen to work with you to set boundaries, but don't be afraid to adopt a "
        "strong position when you need to.\n\n"
        "Don't be afraid to enforce the boundaries you have set. Let your teen know that you are "
        "setting boundaries because you care for them and want only the best for them.\n\n"
        "Find ways to ensure that your teen believes what you say and trusts you.\n\n"
        "Talk regularly and talk often. Many "mini-conversations" about drugs are better than long "
        "boring lectures.\n\n"
        "When talking with your teen, think about their point of view and listen respectfully to "
        "what they have to say.\n\n"
        "Keep the conversation positive and upbeat rather than waiting for an opportunity to "
        "criticize your teen for bad behaviour.\n\n"
        "Take advantage of teachable moments to discuss drug use with your teen. Teachable "
        "moments can happen while driving in the car, at the dinner table while discussing a "
        "situation at school or a current eventCard in the news.\n\n"
        "Eat dinner together as often as possible. The family dinner provides one effective way to "
        "strengthen your communication with your teen.\n\n"
        "Help your teen develop sound reasoning skills and encourage conversations and the open "
        "exchange of ideas and feelings.\n\n"
        "Focus on messages about how drug use affects sports performance, health and appearance. "
        "These messages have more impact because this age group is more affected by peer pressure, "
        "doubt and feeling insecure. Teens like to feel like they belong, that they look and act "
        "like their friends.\n\n"
        "Have a two-way conversation with your teen. Listen to them and respect their opinion. "
        "Provide your teen with information that is meaningful and balanced, without emotion or "
        "drama so that they feel empowered to make healthy choices about drugs.\n\n"
        "Remember to keep the lines of communication open with your teen. Start early and get ahead"
        " of the drug questions. Teens should learn about drugs from their parents first. Be clear "
        "on where you stand about drugs. You are their most important role model and their best "
        "defence against drug use."
    </string>
    <string name="menuToday">Today</string>
    <string name="menuCalendar">Calendar</string>
    <string name="menuTopics">Topics</string>
    <string name="menuSettings">Settings</string>
    <string name="menuFeedback">Feedback</string>
    <string name="topicMenuSex">Gender and Sexuality</string>
    <string name="topicMenuDrugs">Drugs</string>
    <string name="topicMenuRel">Healthy Relationships</string>
    <string name="topicMenuBully">Bullying</string>
</resources>