<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menuToday" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/menuCalendar" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/menuTopics" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menuSettings" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/menuFeedback" />
    </group>

</menu>
